# pretty-good-ai

./: .env.example  .gitignore  ARCHITECTURE.md  BUG_REPORT.md  README.md  pyproject.toml
artifacts/calls/appointment_simple-605be7ff-3872-46f2-b6b4-d509876a8d79/: metadata.json  transcript.txt
artifacts/calls/cancel_appointment-d0b5a7e9-e775-4dc5-81e2-2aa9c9d43c78/: metadata.json  transcript.txt
artifacts/calls/insurance_question-7c67e2fd-9b2f-41df-92cd-f21a2cdd5d97/: metadata.json  transcript.txt
artifacts/calls/interruption_barge_in-63937682-f77e-4206-9395-c675fbcc0f1f/: metadata.json  transcript.txt
artifacts/calls/location_parking-e5c78a6e-ad6b-41dc-ae6f-fb8653404831/: metadata.json  transcript.txt
artifacts/calls/refill_metformin-5c1b8aa1-aea6-4041-85d5-c518d7e5b768/: metadata.json  transcript.txt
artifacts/calls/reschedule_existing-fa6d42ff-272a-4bb7-9851-50ed6ce1c730/: metadata.json  transcript.txt
artifacts/calls/unclear_request-def098f6-a55e-4575-b1c4-784b328dc102/: metadata.json  transcript.txt
artifacts/calls/urgent_symptoms-87a39f5d-3f64-485e-b37e-0ddfc158046e/: metadata.json  transcript.txt
artifacts/calls/weekend_edge-3360ccf5-5819-466a-829e-31b1e12345c4/: metadata.json  (+1 more)
docs/: CALL_PLAN.md  LIVE_TEST_RUNBOOK.md  LOOM_RECORDING_GUIDE.md  SUBMISSION_CHECKLIST.md
src/pgai_patient_bot/: __init__.py  artifacts.py  cli.py  config.py  deepgram.py  llm.py  prompts.py  scenarios.py  telephony.py  twilio_app.py  validation.py
tests/: test_config.py  test_llm.py  test_scenarios.py  test_telephony.py  test_twilio_app.py  test_validation.py
(+1 files in other folders)
