[project]
name = "pgai-patient-bot"
version = "0.1.0"
description = "Automated patient voice bot for the Pretty Good AI engineering challenge."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "twilio>=9.0.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
pgai-bot = "pgai_patient_bot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pgai_patient_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    'ignore:Using `httpx` with `starlette.testclient` is deprecated; install `httpx2` instead.:Warning',
]
